--- a/app/src/main/res/layout/cafe_orders_dialog.xml
+++ b/app/src/main/res/layout/cafe_orders_dialog.xml
@@ -44,7 +44,7 @@
         android:background="@drawable/background_accent_color_top_rounded"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_money">
+        app:layout_constraintTop_toBottomOf="@+id/tv_total_cafe_order">
 
         <TextView
             android:id="@+id/tv_amount"
@@ -112,5 +112,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/iv_close"
         app:srcCompat="@drawable/ic_coffee" />
+
+    <TextView
+        style="@style/SmallHeadLineTextView"
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/total"
+        app:layout_constraintStart_toStartOf="@+id/tv_money"
+        app:layout_constraintTop_toBottomOf="@+id/tv_money" />
+
+    <TextView
+        android:id="@+id/tv_total_cafe_order"
+        style="@style/SmallHeadLineTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="0"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/tv_money" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
