--- a/app/src/main/res/layout/fragment_console.xml
+++ b/app/src/main/res/layout/fragment_console.xml
@@ -21,4 +21,8 @@
         layout="@layout/loading_view"
         tools:visibility="gone" />
 
+    <include
+        layout="@layout/empty_view"
+        tools:visibility="gone" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
