--- a/app/src/main/res/layout/fragment_select_report.xml
+++ b/app/src/main/res/layout/fragment_select_report.xml
@@ -189,4 +189,8 @@
     <include
         layout="@layout/loading_view"
         tools:visibility="invisible" />
+
+    <include
+        layout="@layout/empty_view"
+        tools:visibility="invisible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
