--- a/app/src/main/res/layout/cafe_report_list_item.xml
+++ b/app/src/main/res/layout/cafe_report_list_item.xml
@@ -144,7 +144,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
-        android:text="@string/start_date"
+        android:text="@string/bill_date"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView16"
         app:layout_constraintTop_toBottomOf="@+id/textView18"
