--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,7 +31,7 @@
         android:id="@+id/consoleFragment"
         android:name="com.a.ali.playstation.ui.console.ConsoleFragment"
         android:label="fragment_room"
-        tools:layout="@layout/fragment_room" >
+        tools:layout="@layout/fragment_console" >
         <action
             android:id="@+id/action_console_to_selectReport"
             app:destination="@id/selectReportFragment"
