--- a/app/src/main/res/layout/cafe_orders_list_item.xml
+++ b/app/src/main/res/layout/cafe_orders_list_item.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/tv_amount"
         style="@style/SmallHeadLineTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:layout_marginStart="16dp"
@@ -19,7 +19,7 @@
     <TextView
         android:id="@+id/tv_category"
         style="@style/SmallHeadLineTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:layout_marginStart="16dp"
@@ -31,12 +31,12 @@
     <TextView
         android:id="@+id/tv_price"
         style="@style/SmallHeadLineTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:gravity="center"
         android:text="@string/price" />
 </LinearLayout>
