--- a/app/src/main/res/layout/console_list_item.xml
+++ b/app/src/main/res/layout/console_list_item.xml
@@ -51,10 +51,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
             android:text="@string/start_date"
-            app:layout_constraintBottom_toBottomOf="@+id/mbtn_orders"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/mbtn_orders" />
+            app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
         <TextView
             android:id="@+id/textView3"
