--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,15 +10,6 @@
         android:name="com.a.ali.playstation.ui.login.LoginFragment"
         tools:layout="@layout/fragment_login" >
         <action
-            android:id="@+id/action_login_to_console"
-            app:destination="@id/consoleFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim"
-            app:popUpTo="@+id/loginFragment"
-            app:popUpToInclusive="true" />
-        <action
             android:id="@+id/action_login_to_Ip"
             app:destination="@id/IpFragment" />
     </fragment>
@@ -61,7 +52,7 @@
         tools:layout="@layout/fragment_ip" />
     <fragment
         android:id="@+id/logFragment"
-        android:name="com.a.ali.playstation.ui.LogFragment"
-        android:label="fragment_log"
+        android:name="com.a.ali.playstation.ui.log.LogFragment"
+        android:label="@string/last_actions"
         tools:layout="@layout/fragment_log" />
 </navigation>
