--- a/app/src/main/res/layout/activity_select_report.xml
+++ b/app/src/main/res/layout/activity_select_report.xml
@@ -145,7 +145,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="@+id/s_cafe_type"
+            app:layout_constraintEnd_toEndOf="@+id/rg_report_type"
             app:layout_constraintStart_toEndOf="@+id/barrier2"
             app:layout_constraintTop_toBottomOf="@+id/s_cafe_type">
 
